renamed project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "directives-module",
+  "name": "nutstrap-filters-web",
   "version": "0.1.0",
   "devDependencies": {
       "grunt": "^0.4.5",
