--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "nutstrap-filters-web",
-  "version": "0.1.0",
-  "devDependencies": {
-      "grunt": "^0.4.5",
-      "grunt-contrib-coffee": "~0.13.0",
-      "grunt-contrib-concat": "^0.5.1",
-      "grunt-contrib-copy": "^0.8.0",
-      "grunt-contrib-uglify": "^0.9.1",
-      "grunt-contrib-watch": "^0.6.1"
-  }
+    "name": "nutstrap-filters-web",
+    "version": "0.1.0",
+    "devDependencies": {
+        "angular": "^1.2.27",
+        "angular-flash": "git://github.com/wmluke/angular-flash.git",
+        "ng-i18n": "git://github.com/gertn/ng-i18n.git",
+        "grunt": "^0.4.5",
+        "grunt-contrib-coffee": "~0.13.0",
+        "grunt-contrib-concat": "^0.5.1",
+        "grunt-contrib-copy": "^0.8.0",
+        "grunt-contrib-uglify": "^0.9.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "karma": "^0.12.31",
+        "karma-chrome-launcher": "^0.1.10",
+        "karma-coffee-preprocessor": "^0.2.1",
+        "karma-coverage": "^0.3.1",
+        "karma-jasmine": "^0.1.5",
+        "karma-junit-reporter": "^0.2.2",
+        "karma-phantomjs-launcher": "~0.1"
+    },
+    "scripts": {
+        "test": "./node_modules/karma/bin/karma start --reporters junit,dots,progress  --browsers PhantomJS"
+    }
 }
